--- a/cyTechWeb/style/main.css
+++ b/cyTechWeb/style/main.css
@@ -272,7 +272,8 @@ iframe {
   margin-bottom: 2.5vw; }
   @media (max-width: 991px) {
     .text_link {
-      padding: 4px 30px 4px 12px; } }
+      padding: 4px 30px 4px 12px;
+      font-size: 17px; } }
   @media (max-width: 480px) {
     .text_link {
       font-size: 16px; } }
