--- a/cyTechWeb/style/main.css
+++ b/cyTechWeb/style/main.css
@@ -940,6 +940,16 @@ iframe {
     -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0); } }
 
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0); }
+  to {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0); } }
+
 .animate__animated {
   -webkit-animation-duration: 1s;
   animation-duration: 1s;
@@ -1074,7 +1084,9 @@ iframe {
     -webkit-animation-timing-function: ease-in-out;
             animation-timing-function: ease-in-out;
     -webkit-animation-duration: 1.5s;
-            animation-duration: 1.5s; }
+            animation-duration: 1.5s;
+    z-index: 99;
+    cursor: pointer; }
     @media (max-width: 1366px) {
       .banner .godowwn {
         max-width: 70px; } }
@@ -2475,3 +2487,6 @@ iframe {
   .bg_text_mask img {
     position: absolute;
     bottom: 0; }
+
+html {
+  scroll-behavior: smooth; }
